--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1765,6 +1765,68 @@ section.lazy-placeholder:after {
 .cid-rDmM4J2veH .media-container-row .mbr-text {
   color: #000000;
 }
+.cid-rFxeociQZI {
+  padding-top: 90px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rFxeociQZI .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rFxeociQZI .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rFxeociQZI .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rFxeociQZI .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rFxeociQZI .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #ac4214;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #ac4214, #ffffff) !important;
+}
+.cid-rFxeociQZI .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rFxeociQZI .mbr-gallery-item > div:hover:before {
+  opacity: 0.5 !important;
+}
+.cid-rFxeociQZI .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rFxeociQZI .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #ac4214 !important;
+  opacity: 0.5;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #ac4214, #ffffff) !important;
+}
 .cid-rDlZo7ZxqE .navbar {
   background: #f4aa8a;
   transition: none;
