--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -878,7 +878,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-rDlZo7ZxqE button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -955,6 +955,11 @@ section.lazy-placeholder:after {
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rDlZo7ZxqE .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.5rem);
+  }
 }
 .cid-rDlZo7ZxqE .collapsed button.navbar-toggler {
   display: block;
@@ -1449,7 +1454,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-rDlZo7ZxqE button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1526,6 +1531,11 @@ section.lazy-placeholder:after {
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rDlZo7ZxqE .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.5rem);
+  }
 }
 .cid-rDlZo7ZxqE .collapsed button.navbar-toggler {
   display: block;
@@ -1998,7 +2008,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-rDlZo7ZxqE button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2075,6 +2085,11 @@ section.lazy-placeholder:after {
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rDlZo7ZxqE .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.5rem);
+  }
 }
 .cid-rDlZo7ZxqE .collapsed button.navbar-toggler {
   display: block;
@@ -2482,7 +2497,7 @@ section.lazy-placeholder:after {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-rDlZo7ZxqE button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -2559,6 +2574,11 @@ section.lazy-placeholder:after {
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rDlZo7ZxqE .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rDlZo7ZxqE .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.5rem);
+  }
 }
 .cid-rDlZo7ZxqE .collapsed button.navbar-toggler {
   display: block;
@@ -2716,7 +2736,7 @@ section.lazy-placeholder:after {
   color: #000000 !important;
 }
 .cid-rDmrGT7MGX {
-  padding-top: 90px;
+  padding-top: 60px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
@@ -2733,7 +2753,7 @@ section.lazy-placeholder:after {
   border-radius: 3px;
 }
 .cid-rDmrGT7MGX .google-map {
-  height: 25rem;
+  height: 22rem;
   position: relative;
 }
 .cid-rDmrGT7MGX .google-map iframe {
